nodejsdeployment.yaml



apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 339713105348.dkr.ecr.eu-central-1.amazonaws.com/nodejs2:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: sahil
