2redisservice.yaml

apiVersion: v1
kind: Service
metadata:
  name: redis2
spec:
  type: ClusterIP
  selector:
    app: redis2
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
