nextjsservice.yaml


---
apiVersion: v1
kind: Service
metadata:
  name: nextjs-web
  namespace: frontend
spec:
  selector:
    app: nextjs-web
  ports:
    - port: 80
      targetPort: 3000
