nginx4service.yaml


apiVersion: v1
kind: Service
metadata:
  name: nginx4
spec:
  selector:
    app: nginx4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
